[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3", "kaitaiStructCompile[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "RDataParser"
authors = [{name = "KOLANICH"}]
description = "a pure python parser of RData without using R."
readme = "ReadMe.md"
keywords = ["R", "statistics", "RData", "parser"]
license = {text = "GPL-3.0+"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"License :: OSI Approved",
	"License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
	"numpy",
	"kaitaistruct", # @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git"
]
dynamic = ["version"]

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-ML/RDataParser.py"

[tool.setuptools]
include-package-data = true
zip-safe = true
packages = ["RDataParser"]

[tool.setuptools_scm]

[tool.kaitai]
outputDir = "RDataParser"

[tool.kaitai.flags]
readStoresPos = true

[tool.kaitai.repos."https://codeberg.org/KOLANICH-specs/kaitai_struct_formats.git"."RData"]
update = true
localPath = "kaitai_struct_formats"

[tool.kaitai.repos."https://codeberg.org/KOLANICH-specs/kaitai_struct_formats.git"."RData".formats.r_data]
path = "serialization/r_data.ksy"
